--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
             android:id="@+id/navigation_welcome"
-            android:name="com.example.myapplication.ui.WelcomeFragment"
+            android:name="com.example.questionsApp.ui.WelcomeFragment"
             android:label="Welcome"
             tools:layout="@layout/fragment_welcome">
 
@@ -19,7 +19,7 @@
 
     <fragment
             android:id="@+id/question_home"
-            android:name="com.example.myapplication.ui.QuestionFragment"
+            android:name="com.example.questionsApp.ui.QuestionFragment"
             android:label="Questions"
             tools:layout="@layout/fragment_question">
 
