--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -20,31 +20,15 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-    <androidx.cardview.widget.CardView
+    <com.example.questionsApp.ui.view.ButtonView
             android:id="@+id/startBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            app:cardBackgroundColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:cardCornerRadius="4dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/welcomeLabel">
 
-        <TextView
-                android:id="@+id/start"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginStart="50dp"
-                android:layout_marginEnd="50dp"
-                android:text="Start Survey"
-
-                android:textColor="#55aaff"
-                android:textSize="20sp" />
-
-    </androidx.cardview.widget.CardView>
+    </com.example.questionsApp.ui.view.ButtonView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
