--- a/app/src/main/res/layout/question_item.xml
+++ b/app/src/main/res/layout/question_item.xml
@@ -7,7 +7,7 @@
 
 
     <TextView
-            android:id="@+id/question"
+            android:id="@+id/questionTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
@@ -29,7 +29,7 @@
             android:hint="Type here for an ancer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/question" />
+            app:layout_constraintTop_toBottomOf="@id/questionTxt" />
 
 
     <com.example.questionsApp.ui.view.ButtonView
