--- a/app/src/main/res/layout/question_item.xml
+++ b/app/src/main/res/layout/question_item.xml
@@ -21,7 +21,7 @@
 
 
     <EditText
-            android:id="@+id/answer"
+            android:id="@+id/answerTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/answer" />
+            app:layout_constraintTop_toBottomOf="@id/answerTxt" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
