--- a/app/src/main/res/layout/question_item.xml
+++ b/app/src/main/res/layout/question_item.xml
@@ -32,7 +32,7 @@
             app:layout_constraintTop_toBottomOf="@id/questionTxt" />
 
 
-    <com.example.questionsApp.ui.view.ButtonView
+    <com.example.questionsApp.ui.viewUtils.ButtonView
             android:id="@+id/submit"
             android:layout_marginTop="35dp"
             android:layout_width="wrap_content"
