add to subbmission counter

--- a/app/src/main/res/layout/question_item.xml
+++ b/app/src/main/res/layout/question_item.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:gravity="center"
-            android:hint="Type here for an ancer"
+            android:hint="Type here for an answer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/questionTxt" />
