submit utton checks

--- a/app/src/main/res/layout/btn_view.xml
+++ b/app/src/main/res/layout/btn_view.xml
@@ -23,8 +23,7 @@
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="5dp"
             android:gravity="center"
-            android:textColor="#55aaff"
-
+            android:textColor="@color/sub_blue"
             android:textSize="20sp"
             tools:text="Start Survey" />
 
