--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -39,12 +39,12 @@
                 android:textColor="@color/black"
                 android:textSize="25sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/currentQuestion"
+                app:layout_constraintEnd_toStartOf="@id/currentQuestionNumber"
                 app:layout_constraintStart_toEndOf="@id/backArrow"
                 app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-                android:id="@+id/currentQuestion"
+                android:id="@+id/currentQuestionNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
@@ -63,8 +63,8 @@
                 android:textColor="@color/black"
                 android:textSize="25sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/currentQuestion"
-                app:layout_constraintStart_toEndOf="@id/currentQuestion"
+                app:layout_constraintEnd_toStartOf="@id/currentQuestionNumber"
+                app:layout_constraintStart_toEndOf="@id/currentQuestionNumber"
                 app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -83,13 +83,13 @@
                 android:id="@+id/previousBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
+                android:layout_marginEnd="8dp"
                 android:text="Previous"
                 android:textColor="@color/black"
                 android:textSize="25sp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/nextBtn"
+                app:layout_constraintStart_toEndOf="@id/guideline2"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:visibility="visible" />
 
@@ -107,6 +107,13 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:visibility="visible" />
+
+        <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.6" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -147,6 +154,16 @@
             tools:listitem="@layout/question_item">
 
     </androidx.recyclerview.widget.RecyclerView>
+
+
+    <com.example.questionsApp.ui.viewUtils.ButtonView
+            android:id="@+id/submit"
+            android:layout_marginTop="35dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/questionsRecycler" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
