--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#ff0000</color>
     <color name="green">#00ff00</color>
+    <color name ="dark_grey">#a9a9a9</color>
+    <color name="sub_blue">#55aaff</color>
 </resources>
