--- a/app/src/main/res/layout/question_item.xml
+++ b/app/src/main/res/layout/question_item.xml
@@ -8,9 +8,9 @@
 
     <TextView
             android:id="@+id/questionTxt"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_margin="50dp"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="30dp"
@@ -24,7 +24,7 @@
             android:id="@+id/answerTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_margin="50dp"
             android:gravity="center"
             android:hint="Type here for an answer"
             app:layout_constraintEnd_toEndOf="parent"
